# MyRuflo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-gcp.txt  requirements.txt
.claude/: launch.json
deploy/gcp/: deploy.sh
docker/: entrypoint.sh  litestream.yml
myruflo/: __main__.py  cli.py  config.py
myruflo/agents/: agent.py  roles.py
myruflo/hooks/: manager.py
myruflo/llm/: client.py  providers.py  router.py  specs.py
myruflo/memory/: embedding.py  store.py
myruflo/swarm/: orchestrator.py
myruflo/tools/: file_ops.py  registry.py  schemas.py  shell_ops.py
myruflo/web/: __init__.py  admin.py  app.py  attachments.py  auth.py  chat.py  db.py  deps.py  memory_ui.py  platform_settings.py  platforms.py  security.py  settings.py  templating.py  tool_settings.py
myruflo/web/static/css/: theme.css
myruflo/web/static/js/: chat.js  theme.js
myruflo/web/templates/: _message_list.html  admin_dashboard.html  admin_platforms.html  admin_tools.html  admin_users.html  base.html  chat.html  login.html  memory.html  register.html  settings.html
myruflo/web/templates/errors/: 403.html  404.html
tests/: conftest.py  test_agent.py  test_config.py  test_e2e_routing.py  test_hooks.py  test_memory.py  test_orchestrator.py  test_platform_admin.py  test_provider_secrets.py  test_providers.py  test_router.py  test_tools.py  test_web_auth.py  test_web_chat.py  test_web_db.py  test_web_security.py  test_web_tool_settings.py
