[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myruflo"
version = "0.1.0"
description = "MyRuflo — a standalone multi-agent AI tool powered directly by the Anthropic API."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "numpy>=1.24",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gcp = ["google-cloud-secret-manager>=2.20.0"]
dev = ["pytest", "httpx"]

[project.scripts]
myruflo = "myruflo.cli:main"

[tool.setuptools.packages.find]
include = ["myruflo*"]

[tool.setuptools.package-data]
"myruflo.web" = ["templates/**/*", "static/**/*"]
